--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nbapool2025",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,10 +12,14 @@
   "description": "",
   "dependencies": {
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
